--- a/src/R/pcgrr/inst/templates/variant_statistics_browser.Rmd
+++ b/src/R/pcgrr/inst/templates/variant_statistics_browser.Rmd
@@ -164,7 +164,7 @@ crosstalk::bscols(
   ),
   list(
     crosstalk::filter_select("CONSEQUENCE", "Consequence", variants_shared, ~CONSEQUENCE),
-    crosstalk::filter_slider_allelic_fraction("AF_TUMOR", "Allelic fraction tumor", variants_shared, ~AF_TUMOR, step=0.05, ticks = T, sep = F)
+    pcgrr::filter_slider_allelic_fraction("AF_TUMOR", "Allelic fraction tumor", variants_shared, ~AF_TUMOR, step=0.05, ticks = T, sep = F)
 
   )
 )
@@ -191,7 +191,7 @@ crosstalk::bscols(
   list(
     crosstalk::filter_select("TIER", "Tier", variants_shared, ~TIER),
     crosstalk::filter_slider("DP_TUMOR", "Sequencing depth tumor", variants_shared, ~DP_TUMOR, ticks = F, sep = F),
-    crosstalk::filter_slider_allelic_fraction("AF_TUMOR", "Allelic fraction tumor", variants_shared, ~AF_TUMOR, step=0.05, ticks = T, sep = F)
+    pcgrr::filter_slider_allelic_fraction("AF_TUMOR", "Allelic fraction tumor", variants_shared, ~AF_TUMOR, step=0.05, ticks = T, sep = F)
   ),
   list(
     crosstalk::filter_select("CONSEQUENCE", "Consequence", variants_shared, ~CONSEQUENCE),
@@ -222,12 +222,12 @@ crosstalk::bscols(
   list(
     crosstalk::filter_select("TIER", "Tier", variants_shared, ~TIER),
     crosstalk::filter_slider("DP_TUMOR", "Sequencing depth tumor", variants_shared, ~DP_TUMOR, sep=F, ticks = F),
-    crosstalk::filter_slider_allelic_fraction("AF_TUMOR", "Allelic fraction tumor", variants_shared, ~AF_TUMOR, step=0.05, sep=F, ticks = T)
+    pcgrr::filter_slider_allelic_fraction("AF_TUMOR", "Allelic fraction tumor", variants_shared, ~AF_TUMOR, step=0.05, sep=F, ticks = T)
   ),
   list(
     crosstalk::filter_select("CONSEQUENCE", "Consequence", variants_shared, ~CONSEQUENCE),
     crosstalk::filter_slider("DP_NORMAL", "Sequencing depth control", variants_shared, ~DP_NORMAL, sep=F, ticks = F),
-    crosstalk::filter_slider_allelic_fraction("AF_NORMAL", "Allelic fraction control", variants_shared, ~AF_NORMAL, step=0.05, sep=F, ticks = T)
+    pcgrr::filter_slider_allelic_fraction("AF_NORMAL", "Allelic fraction control", variants_shared, ~AF_NORMAL, step=0.05, sep=F, ticks = T)
   )
 )
   
@@ -253,13 +253,13 @@ crosstalk::bscols(
   list(
     crosstalk::filter_select("TIER", "Tier", variants_shared, ~TIER),
     crosstalk::filter_slider("DP_TUMOR", "Sequencing depth tumor", variants_shared, ~DP_TUMOR, sep=F, ticks = F),
-    crosstalk::filter_slider_allelic_fraction("AF_TUMOR", "Allelic fraction tumor", variants_shared, ~AF_TUMOR, step=0.05, sep=F, ticks = T)
+    pcgrr::filter_slider_allelic_fraction("AF_TUMOR", "Allelic fraction tumor", variants_shared, ~AF_TUMOR, step=0.05, sep=F, ticks = T)
   ),
   list(
     crosstalk::filter_select("CONSEQUENCE", "Consequence", variants_shared, ~CONSEQUENCE),
     crosstalk::filter_select("CALL_CONFIDENCE", "Call confidence", variants_shared, ~CALL_CONFIDENCE),
     crosstalk::filter_slider("DP_NORMAL", "Sequencing depth control", variants_shared, ~DP_NORMAL, sep=F, ticks = F),
-    crosstalk::filter_slider_allelic_fraction("AF_NORMAL", "Allelic fraction control", variants_shared, ~AF_NORMAL, step=0.05, sep=F, ticks = T)
+    pcgrr::filter_slider_allelic_fraction("AF_NORMAL", "Allelic fraction control", variants_shared, ~AF_NORMAL, step=0.05, sep=F, ticks = T)
   )
 )
   
